Fix overlay took too much space while being closed

--- a/app/assets/style/buttons.css
+++ b/app/assets/style/buttons.css
@@ -4,8 +4,12 @@
     background: rgba(28, 28, 32, .95);
     box-shadow: inset 0 5px #22222799, inset 0 -4px #12121599;
     width: 50px;
-    left: 0;
+    left: -50px;
     margin-right: 14px;
+}
+
+#buttons.opened {
+    left: 0;
 }
 
 #buttons.opened #close-button {
